Fix issue where navigation item SVG would shrink and multiple words would wrap onto new lines

--- a/assets/css/components/nav/_default.scss
+++ b/assets/css/components/nav/_default.scss
@@ -15,7 +15,7 @@
     li {
         align-items: center;
         display: flex;
-        flex: 1;
+        flex: 1 0 auto;
         margin: 0;
         padding: var(--spacing1) 0;
         position: relative;
@@ -34,6 +34,8 @@
         text-decoration-thickness: 1px;
 
         svg {
+            flex-shrink: 0;
+
             path {
                 stroke: var(--colorTextSubtle);
             }
